# SchoolTools

./: AddModifyEventWidget.ui  EventListWidget.ui  EventWidget.ui
Schedule/: CMakeLists.txt  Doxyfile  TODO  main.cpp
Schedule/doc/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  abstractid_8cpp.html  abstractid_8cpp__dep__incl.md5  abstractid_8cpp__incl.md5  abstractid_8cpp_source.html  abstractid_8h.html  abstractid_8h__dep__incl.map  abstractid_8h__dep__incl.md5  abstractid_8h__incl.md5  abstractid_8h_source.html  abstractidgenerator_8cpp.html  abstractidgenerator_8cpp__dep__incl.md5  abstractidgenerator_8cpp__incl.md5  abstractidgenerator_8cpp_source.html  abstractidgenerator_8h.html  abstractidgenerator_8h__dep__incl.map  abstractidgenerator_8h__dep__incl.md5  abstractidgenerator_8h__incl.map  abstractidgenerator_8h__incl.md5  abstractidgenerator_8h_source.html  abstractincrementalid_8cpp.html  abstractincrementalid_8cpp__dep__incl.md5  abstractincrementalid_8cpp__incl.md5  abstractincrementalid_8cpp_source.html  abstractincrementalid_8h.html  abstractincrementalid_8h__dep__incl.map  (+829 more)
Schedule/include/: complist.h  deletable.h  event.h  events.h  generatoridgenerator.h  idgenerator.h  initializable.h  mark.h  markevaluator.h  subject.h  subjects.h  term.h  type.h
Schedule/src/: CMakeLists.txt  complist.cpp  deletable.cpp  event.cpp  events.cpp  generatoridgenerator.cpp  idgenerator.cpp  initializable.cpp  mark.cpp  markevaluator.cpp  subject.cpp  subjects.cpp  term.cpp  type.cpp
(+486 files in other folders)
